# ht-rust

./: .yaml  Cargo.toml  README.md
src/: argument_parser.rs  http_client.rs  main.rs  printer.rs  request_type.rs  validator.rs
src/builders/: request_builder.rs  response_builder.rs
src/converters/: request_converter.rs  response_converter.rs
src/dto/: request_dto.rs  response_dto.rs
