[package]
name = "ht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.7"
colored = "2.0.3"
http = "0.2"

